--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -111,8 +111,11 @@ const faqLd = faqSchema?.length ? JSON.stringify({
   )}
   <meta name="author" content={authorName} />
   <meta name="theme-color" content="#3FB8D3" />
-  <link rel="icon" type="image/png" href="/img/avatar.png" />
-  <link rel="apple-touch-icon" href="/img/avatar.png" />
+  <link rel="icon" type="image/x-icon" href="/img/favicons/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/apple-touch-icon.png" />
+  <link rel="manifest" href="/img/favicons/site.webmanifest" />
   <link rel="canonical" href={canonicalURL} />
   <link rel="alternate" type="application/rss+xml" title={siteName} href={new URL('/rss.xml', Astro.site)} />
   <link rel="sitemap" href="/sitemap-index.xml" />
